--- a/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
@@ -1,57 +1,82 @@
-{% extends '::base.html.twig' %}
+{# src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig #}
+{% extends 'NmsAdminBundle::layout.html.twig' %}
+
+{% set page_title = 'Meals menu' %}
+
+{% block title %}
+{{ parent() }} {{ page_title }}
+{% endblock %}
+
+{% block stylesheets %}
+{% endblock %}
+
+{% block pagetitle %}{% endblock %}
+
+{% block breadcrumb %}{% endblock %}
 
 {% block body -%}
-    <h1>Meal list</h1>
+<!--=== Content Part ===-->
+<div class="container">
+    <div class="row-fluid">
+        <div class="row-fluid margin-bottom-20">
+            <div class="span12">
+                <div class="headline">
+                    <h3>Menu items</h3>
+                </div>
+                <div class="row-fluid">
+                    <div class="span12">
+                    {{ knp_pagination_filter(pagination, fields) }}
+                    </div>
+                    <div class="pull-right">
+                        <a href="{{ path('menu_new') }}" class="btn green"><i class="icon-plus"></i> Add</a>
+                    </div>
+                </div>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                        {# sorting of properties based on query components #}
+                            <th>{{ knp_pagination_sortable(pagination, 'Title', 'm.title') }}</th>
+                            <th{% if pagination.isSorted('m.content') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Content', 'm.content') }}</th>
+                            <th>Published</th>
+                            <th>Expired</th>
+                            <th>Price</th>
+                            <th>Updated</th>
+                            <th>Updated By</th>
+                            <th style="width:100px">Actions</th>
+                        </tr>
+                    </thead>
 
-    <table class="records_list">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Content</th>
-                <th>Publish</th>
-                <th>Expire</th>
-                <th>Price</th>
-                <th>Created</th>
-                <th>Createdby</th>
-                <th>Updated</th>
-                <th>Updatedby</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('meal_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.title }}</td>
-                <td>{{ entity.content }}</td>
-                <td>{% if entity.publish %}{{ entity.publish|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if entity.expire %}{{ entity.expire|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ entity.price }}</td>
-                <td>{% if entity.created %}{{ entity.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ entity.createdby }}</td>
-                <td>{% if entity.updated %}{{ entity.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ entity.updatedby }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('meal_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('meal_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('meal_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+                    <tbody>
+                        {% for meal in pagination %}
+                        <tr>
+                            <td><a href="{{ path('meal_show', { 'id': meal.id }) }}">{{ meal.id }}</a></td>
+                            <td>{{ meal.title }}</td>
+                            <td>{{ meal.content }}</td>
+                            <td>{% if entity.publish %}{{ entity.publish|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            <td>{% if entity.expire %}{{ entity.expire|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            <td>{{ entity.price }}</td>
+                            <td>{% if entity.updated %}{{ entity.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            <td>{{ entity.updatedby }}</td>
+                            <td>
+                                <a href="{{ path('meal_show', { 'id': meal.id }) }}" class="btn blue-stripe mini">view</a>
+                                <a href="{{ path('meal_edit', { 'id': meal.id }) }}" class="btn red-stripe mini">edit</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="dataTables_info" id="record_info">{{pagination.TotalItemCount}} records in total.</div>
+                    </div>
+                    <div class="span6">
+                        {{ knp_pagination_render(pagination) }}
+                    </div>
+                </div>
+            </div>
+        </div><!--/row-fluid-->
+    </div><!--/row-fluid-->
+    <!--//Default Tables styles -->
+</div><!--/container-->
+<!--=== End Content Part ===-->
+{% endblock %}
