--- a/src/Nms/AdminBundle/Resources/views/Security/login.html.twig
+++ b/src/Nms/AdminBundle/Resources/views/Security/login.html.twig
@@ -1,100 +1,58 @@
 {# src/Nms/AdminBundle/Resources/views/Security/login.html.twig #}
 {% extends 'NmsAdminBundle::layout.html.twig' %}
 
-{% set page_title = 'Login' %}
+{% set page_title = '' %}
 
 {% block title %}
 {{ parent() }} {{page_title }}
 {% endblock %}
 
 {% block stylesheets %}
-<link href="/theme/css/pages/login.css" rel="stylesheet" type="text/css"/>
+{#<link href="/theme/css/pages/login.css" rel="stylesheet" type="text/css"/>#}
 {% endblock %}
 
 {% block javascripts %}
-<script type="text/javascript" src="/theme/scripts/login.js"></script>
-<script type="text/javascript">
-    Login.init();
-</script>
+{#<script type="text/javascript" src="/theme/scripts/login.js"></script>#}
+{#<script type="text/javascript">#}
+{#    Login.init();#}
+{#</script>#}
 {% endblock %}
 
 {% block pagetitle %} {{page_title}} {% endblock %}
 
 {% block body %}
-<div class="content">
-    <div class="span3"></div>
-    <div class="span4">
-        <!-- BEGIN LOGIN FORM -->
-        <form class="form-vertical login-form" action="{{ path("login_check") }}" method="post">
+<div class="container">
+	<div class="row">
+        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+            <form class="reg-page" action="{{ path("login_check") }}" method="post">
+                <div class="reg-header">
+                    <h2>Login to your account</h2>
+                </div>
 
-            <h3 class="form-title">Login to your account</h3>
-            <div class="alert alert-error hide">
-                <button class="close" data-dismiss="alert"></button>
-                <span>Enter any username and password.</span>
-            </div>
-            <div class="control-group">
-                <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
-                <label class="control-label visible-ie8 visible-ie9" for="username">{{ 'security.login.username'|trans({}, 'NmsAdminBundle') }}</label>
-                <div class="controls">
-                    <div class="input-icon left">
-                        <i class="icon-user"></i>
-                        <input class="m-wrap placeholder-no-fix" type="text" placeholder="Username" name="_username" value="{{ last_username }}" required="required" />
+
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="icon-user"></i></span>
+                    <input type="text" placeholder="Username" class="form-control" name="_username" value="{{ last_username }}" required="required" />
+                </div>
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="icon-lock"></i></span>
+                    <input type="password" placeholder="Password" class="form-control" name="_password" required="required" />
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <label class="checkbox"><input type="checkbox" name="_remember_me" value="on" > Stay signed in</label>
+                    </div>
+                    <div class="col-md-6">
+                        <button class="btn-u pull-right" type="submit">Login</button>
                     </div>
                 </div>
-            </div>
+                <hr>
+                <h4>Forget your Password ?</h4>
+                <p>no worries, <a class="color-green" href="#">click here</a> to reset your password.</p>
+            </form>
+        </div>
+    </div><!--/row-->
+</div><!--/container-->
 
-            <div class="control-group">
-                <label class="control-label visible-ie8 visible-ie9" for="password">{{ 'security.login.password'|trans({}, 'NmsAdminBundle') }}</label>
-                <div class="controls">
-                    <div class="input-icon left">
-                        <i class="icon-lock"></i>
-                        <input class="m-wrap placeholder-no-fix" type="password" placeholder="Password" name="_password" required="required" />
-                    </div>
-                </div>
-            </div>
-            <div class="control-group">
-                    <div class="controls">
-                        <input type="checkbox" name="_remember_me" value="on" > Remember me
-                    </div>
-            </div>
-
-            <div class="form-actions">
-                <button type="submit" class="btn green pull-right">
-                    Login <i class="m-icon-swapright m-icon-white"></i>
-                </button>
-            </div>
-            <div class="forget-password">
-                <h4>Forgot your password ?</h4>
-                <p>
-                    no worries, click <a href="javascript:;" class="" id="forget-password">here</a>
-                    to reset your password.
-                </p>
-            </div>
-        </form>
-        <!-- END LOGIN FORM -->
-        <!-- BEGIN FORGOT PASSWORD FORM -->
-        <form class="form-vertical forget-form" action="{{ path('user_request') }}" style="display: none;">
-            <h3 class="">Forget Password ?</h3>
-            <p>Enter your e-mail address or username below to reset your password.</p>
-            <div class="control-group">
-                <div class="controls">
-                    <div class="input-icon left">
-                        <i class="icon-envelope"></i>
-                        <input class="m-wrap placeholder-no-fix" type="text" placeholder="Email or User name" name="username">
-                    </div>
-                </div>
-            </div>
-            <div class="form-actions">
-                <button type="button" id="back-btn" class="btn">
-                    <i class="m-icon-swapleft"></i> Back
-                </button>
-                <button type="submit" class="btn green pull-right">
-                    Submit <i class="m-icon-swapright m-icon-white"></i>
-                </button>
-            </div>
-        </form>
-        <!-- END FORGOT PASSWORD FORM -->
-    </div>
-    <div class="span4"></div>
-</div>
 {% endblock body %}
