--- a/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
@@ -30,7 +30,7 @@
 <!--=== Content Part ===-->
 <div class="container">
     <div class="row">
-        <div class="panel panel-grey margin-bottom-40">
+        <div class="panel panel-green margin-bottom-40">
             <div class="panel-heading">
                 <h3 class="panel-title"><i class="icon-tasks"></i> {{page_title}}</h3>
             </div>
@@ -65,4 +65,44 @@
         </div>
     </div>
 </div>
+
+<!--Horizontal Form-->
+<div class="panel panel-green margin-bottom-40">
+    <div class="panel-heading">
+        <h3 class="panel-title"><i class="icon-tasks"></i> Horizontal Form</h3>
+    </div>
+    <div class="panel-body">
+        <form class="form-horizontal" role="form">
+            <div class="form-group">
+                <label for="inputEmail1" class="col-lg-2 control-label">Email</label>
+                <div class="col-lg-10">
+                    <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword1" class="col-lg-2 control-label">Password</label>
+                <div class="col-lg-10">
+                    <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-10">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Remember me
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-10">
+                    <button type="submit" class="btn-u btn-u-green">Sign in</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!--End Horizontal Form-->
+
+
 {% endblock %}
