--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,8 @@
         <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="/assets/css/style.css">
         <link rel="stylesheet" href="/assets/css/headers/header1.css">
-        <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap-responsive.min.css">
+{#        <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap-responsive.min.css">#}
+        <link rel="stylesheet" href="/assets/css/responsive.css">
         <link rel="stylesheet" href="/assets/css/style_responsive.css">
         <link rel="shortcut icon" href="{{ asset('/images/favicons/favicon.ico')}}">
 
