--- a/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
@@ -30,79 +30,77 @@
 <!--=== Content Part ===-->
 <div class="container">
     <div class="row">
-        <div class="panel panel-green margin-bottom-40">
-            <div class="panel-heading">
-                <h3 class="panel-title"><i class="icon-tasks"></i> {{page_title}}</h3>
-            </div>
-            <div class="panel-body">
+        <div class="col-md-9">
+            <div class="panel panel-green margin-bottom-40">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="icon-tasks"></i> {{page_title}}</h3>
+                </div>
+                <div class="panel-body">
                 {{ form_errors(form) }}
-                <form action="{{ path('meal_create', { 'id': entity.id }) }}" class="form-horizontal" role="form" method="post" {{ form_enctype(form) }}>
-                    <div class="form-group">
+                    <form action="{{ path('meal_create', { 'id': entity.id }) }}" class="form-horizontal" role="form" method="post" {{ form_enctype(form) }}>
+                        <div class="form-group">
                         {{ form_label(form.title, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
-                        <div class="col-lg-10">
+                            <div class="col-lg-10">
                             {{ form_errors(form.title) }}
                             {{ form_widget(form.title, {'attr':{'class':'form-control'} }) }}
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
+                        <div class="form-group">
                         {{ form_label(form.content, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
-                        <div class="col-lg-10">
+                            <div class="col-lg-10">
                             {{ form_errors(form.content) }}
-                            {{ form_widget(form.content, {'attr':{'class':'form-control'} }) }}
+                            {{ form_widget(form.content, {'attr':{'class':'form-control col-lg-10'} }) }}
+                            </div>
                         </div>
-                    </div>
+                        <div class="form-group">
+                        {{ form_label(form.sitting, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
+                            <div class="col-lg-12">
+                            {{ form_errors(form.sitting) }}
+                            {{ form_widget(form.sitting, {'attr':{'class':'form-control'} }) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                        {{ form_label(form.menugroup, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
+                            <div class="col-lg-10">
+                            {{ form_errors(form.menugroup) }}
+                            {{ form_widget(form.menugroup, {'attr':{'class':'form-control'} }) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                        {{ form_label(form.price, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
+                            <div class="col-lg-10">
+                            {{ form_errors(form.price) }}
+                            {{ form_widget(form.price, {'attr':{'class':'form-control'} }) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                        {{ form_label(form.publish, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
+                            <div class="col-lg-10">
+                            {{ form_errors(form.publish) }}
+                            {{ form_widget(form.publish, {'attr':{'class':'form-control'} }) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                        {{ form_label(form.expire, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
+                            <div class="col-lg-10">
+                            {{ form_errors(form.expire) }}
+                            {{ form_widget(form.expire, {'attr':{'class':'form-control'} }) }}
+                            </div>
+                        </div>
 
                     {{ form_rest(form) }}
-                    <div class="form-group">
-                        <div class="col-lg-offset-2 col-lg-10">
-                            <button type="submit" class="btn-u btn-u-green"><i class="icon-ok"></i> Create</button>
-                            <a href="{{ path('meal') }}" class="btn black" >Back</a>
-                        </div>
-                    </div>
 
-                </form>
+                        <div class="form-group">
+                            <div class="col-lg-offset-2 col-lg-10">
+                                <button type="submit" class="btn-u btn-u-green"><i class="icon-ok"></i> Create</button>
+                                <a href="{{ path('meal') }}" class="btn black" >Back</a>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<!--Horizontal Form-->
-<div class="panel panel-green margin-bottom-40">
-    <div class="panel-heading">
-        <h3 class="panel-title"><i class="icon-tasks"></i> Horizontal Form</h3>
-    </div>
-    <div class="panel-body">
-        <form class="form-horizontal" role="form">
-            <div class="form-group">
-                <label for="inputEmail1" class="col-lg-2 control-label">Email</label>
-                <div class="col-lg-10">
-                    <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword1" class="col-lg-2 control-label">Password</label>
-                <div class="col-lg-10">
-                    <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-lg-offset-2 col-lg-10">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Remember me
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-lg-offset-2 col-lg-10">
-                    <button type="submit" class="btn-u btn-u-green">Sign in</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<!--End Horizontal Form-->
-
-
 {% endblock %}
