--- a/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
@@ -8,6 +8,19 @@
 {% endblock %}
 
 {% block stylesheets %}
+    <link rel="stylesheet" href="{{asset('theme/assets/css/pages/page_contact.css')}}">
+{% endblock %}
+
+{% block javascripts %}
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="{{asset('theme/assets/plugins/gmap/gmap.js')}}"></script>
+<!-- JS Page Level -->
+<script type="text/javascript" src="{{asset('js/pages/contact.js')}}"></script>
+
+{% endblock %}
+
+{% block jqueryinit %}
+Contact.initMap();
 {% endblock %}
 
 {% block pagetitle %}{% endblock %}
@@ -15,28 +28,47 @@
 {% block breadcrumb %}{% endblock %}
 
 {% block body -%}
+
+<!--=== Content Part ===-->
 <div class="container">
-	<div class="row-fluid">
-		<div class="span9">
+    <div class="row margin-bottom-30">
+        <div class="col-md-9 mb-margin-bottom-30">
+            <!-- Google Map -->
             <div id="map" class="map map-box map-box-space margin-bottom-40">
             </div><!---/map-->
+            <!-- End Google Map -->
 
             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
-			<form>
+            <form>
                 <label>Name</label>
-                <input type="text" class="span7" />
+                <div class="row margin-bottom-20">
+                    <div class="col-md-7 col-md-offset-0">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
                 <label>Email <span class="color-red">*</span></label>
-                <input type="text" class="span7" />
+                <div class="row margin-bottom-20">
+                    <div class="col-md-7 col-md-offset-0">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
                 <label>Message</label>
-                <textarea rows="8" class="span10"></textarea>
+                <div class="row margin-bottom-20">
+                    <div class="col-md-11 col-md-offset-0">
+                        <textarea rows="8" class="form-control"></textarea>
+                    </div>
+                </div>
+
                 <p><button type="submit" class="btn-u">Send Message</button></p>
             </form>
-        </div><!--/span9-->
+        </div><!--/col-md-9-->
 
-        <div class="span3">
+        <div class="col-md-3">
             <!-- Contacts -->
-            <div class="headline"><h3>Contacts</h3></div>
-            <ul class="unstyled who margin-bottom-20">
+            <div class="headline"><h2>Contacts</h2></div>
+            <ul class="list-unstyled who margin-bottom-30">
                 <li><a href="#"><i class="icon-home"></i>5 Kellet Streat, Potts Point </a></li>
                 <li><a href="#"><i class="icon-envelope-alt"></i>info@cafeboheme.com.au</a></li>
                 <li><a href="#"><i class="icon-phone-sign"></i>+61 2 9999 9999</a></li>
@@ -44,36 +76,25 @@
             </ul>
 
             <!-- Business Hours -->
-            <div class="headline"><h3>Opening Hours</h3></div>
-            <ul class="unstyled">
-                <li><strong>Monday-Friday:</strong> 7am to 10pm</li>
+            <div class="headline"><h2>Business Hours</h2></div>
+            <ul class="list-unstyled margin-bottom-30">
+                <li><strong>Monday-Friday:</strong> 10am to 8pm</li>
+                <li><strong>Saturday:</strong> 7am to 3pm</li>
                 <li><strong>Saturday:</strong> 8am to 3pm</li>
-                <li><strong>Sunday:</strong> Closed</li>
+                <li><strong>Tuesday:</strong> Closed</li>
             </ul>
 
             <!-- Why we are? -->
-            <div class="headline"><h3>Why we are?</h3></div>
+            <div class="headline"><h2>Why we are?</h2></div>
             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
-            <ul class="unstyled">
+            <ul class="list-unstyled">
                 <li><i class="icon-ok color-green"></i> Odio dignissimos ducimus</li>
                 <li><i class="icon-ok color-green"></i> Blanditiis praesentium volup</li>
                 <li><i class="icon-ok color-green"></i> Eos et accusamus</li>
             </ul>
-        </div><!--/span3-->
-    </div><!--/row-fluid-->
+        </div><!--/col-md-3-->
+    </div><!--/row-->
+
 </div><!--/container-->
 <!--=== End Content Part ===-->
 {% endblock %}
-
-{% block javascripts %}
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript" src="/assets/plugins/gmap/gmap.js"></script>
-<!-- JS Page Level -->
-<script type="text/javascript" src="/assets/js/pages/contact.js"></script>
-</script>
-{% endblock %}
-
-{% block jqueryinit %}
-Contact.initMap();
-{% endblock %}
-
