--- a/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
@@ -31,7 +31,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div class="panel panel-green margin-bottom-40">
+            <div class="panel margin-bottom-40">
                 <div class="panel-heading">
                     <h3 class="panel-title"><i class="icon-tasks"></i> {{page_title}}</h3>
                 </div>
@@ -39,8 +39,8 @@
                 {{ form_errors(form) }}
                     <form action="{{ path('meal_create', { 'id': entity.id }) }}" class="form-horizontal" method="post" {{ form_enctype(form) }}>
                         <div class="form-group">
-                        {{ form_label(form.title, label|default(null), { 'label_attr': { 'class': 'col-lg-3 control-label' } }) }}
-                            <div class="col-lg-9">
+                        {{ form_label(form.title, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
+                            <div class="col-lg-6">
                             {{ form_errors(form.title) }}
                             {{ form_widget(form.title, {'attr':{'class':'form-control'} }) }}
                             </div>
@@ -54,35 +54,35 @@
                         </div>
                         <div class="form-group">
                         {{ form_label(form.sitting, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
-                            <div class="col-lg-12">
+                            <div class="col-lg-4">
                             {{ form_errors(form.sitting) }}
                             {{ form_widget(form.sitting, {'attr':{'class':'form-control'} }) }}
                             </div>
                         </div>
                         <div class="form-group">
                         {{ form_label(form.menugroup, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
-                            <div class="col-lg-10">
+                            <div class="col-lg-4">
                             {{ form_errors(form.menugroup) }}
                             {{ form_widget(form.menugroup, {'attr':{'class':'form-control'} }) }}
                             </div>
                         </div>
                         <div class="form-group">
                         {{ form_label(form.price, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
-                            <div class="col-lg-10">
+                            <div class="col-lg-4">
                             {{ form_errors(form.price) }}
-                            {{ form_widget(form.price, {'attr':{'class':'form-control'} }) }}
+                            {{ form_widget(form.price, {'attr':{'class':'form-control text-right'} }) }}
                             </div>
                         </div>
                         <div class="form-group">
                         {{ form_label(form.publish, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
-                            <div class="col-lg-10">
+                            <div class="col-lg-3">
                             {{ form_errors(form.publish) }}
                             {{ form_widget(form.publish, {'attr':{'class':'form-control'} }) }}
                             </div>
                         </div>
                         <div class="form-group">
                         {{ form_label(form.expire, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
-                            <div class="col-lg-10">
+                            <div class="col-lg-3">
                             {{ form_errors(form.expire) }}
                             {{ form_widget(form.expire, {'attr':{'class':'form-control'} }) }}
                             </div>
