--- a/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
@@ -28,7 +28,7 @@
                     {{ knp_pagination_filter(pagination, fields) }}
                     </div>
                     <div class="pull-right">
-                        <a href="{{ path('meal_new') }}" class="btn green"><i class="icon-plus"></i> Add</a>
+                        <a href="{{ path('meal_new') }}" class="btn btn-u-green"><i class="icon-plus"></i> Add</a>
                     </div>
                 </div>
                 <table class="table table-striped">
@@ -49,17 +49,16 @@
                     <tbody>
                         {% for meal in pagination %}
                         <tr>
-                            <td><a href="{{ path('meal_show', { 'id': meal.id }) }}">{{ meal.id }}</a></td>
                             <td>{{ meal.title }}</td>
                             <td>{{ meal.content }}</td>
-                            <td>{% if entity.publish %}{{ entity.publish|date('Y-m-d H:i:s') }}{% endif %}</td>
-                            <td>{% if entity.expire %}{{ entity.expire|date('Y-m-d H:i:s') }}{% endif %}</td>
-                            <td>{{ entity.price }}</td>
-                            <td>{% if entity.updated %}{{ entity.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-                            <td>{{ entity.updatedby }}</td>
+                            <td>{% if meal.publish %}{{ meal.publish|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            <td>{% if meal.expire %}{{ meal.expire|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            <td>{{ meal.price }}</td>
+                            <td>{% if meal.updated %}{{ meal.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            <td>{{ meal.updatedby }}</td>
                             <td>
-                                <a href="{{ path('meal_show', { 'id': meal.id }) }}" class="btn blue-stripe mini">view</a>
-                                <a href="{{ path('meal_edit', { 'id': meal.id }) }}" class="btn red-stripe mini">edit</a>
+                                <a href="{{ path('meal_show', { 'id': meal.id }) }}" class="btn btn-info btn-xs">view</a>
+                                <a href="{{ path('meal_edit', { 'id': meal.id }) }}" class="btn btn-primary btn-xs">edit</a>
                             </td>
                         </tr>
                     {% endfor %}
