--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -245,7 +245,7 @@
 <script type="text/javascript" src="{{asset('theme/assets/plugins/jquery-migrate-1.2.1.min.js')}}"></script>
 <script type="text/javascript" src="{{asset('theme/assets/plugins/bootstrap/js/bootstrap.min.js')}}"></script>
 <script type="text/javascript" src="{{asset('theme/assets/plugins/hover-dropdown.min.js')}}"></script>
-<script type="text/javascript" src="{{asset('theme/assets/plugins/back-to-top.js')}}"></script>
+{#<script type="text/javascript" src="{{asset('theme/assets/plugins/back-to-top.js')}}"></script>#}
 <!-- JS Implementing Plugins -->
 <script type="text/javascript" src="{{asset('theme/assets/plugins/flexslider/jquery.flexslider-min.js')}}"></script>
 <script type="text/javascript" src="{{asset('theme/assets/plugins/parallax-slider/js/modernizr.js')}}"></script>
@@ -257,7 +257,6 @@
 <script type="text/javascript">
     jQuery(document).ready(function() {
         App.init();
-        App.initSliders();
 <!--        App.initSliders();-->
 <!--        Index.initParallaxSlider();-->
         {% block jqueryinit %} {% endblock %}
